# Pippin

./: .gitignore  .readthedocs.yaml  .travis.yml  README.md  cfg.ini  cfg.yml  pippin.sh  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: black-formatter.yml  github-actions-demo.yml  test-pippin.yml
SBATCH_TEMPLATES/: SBATCH_DEFAULT.TEMPLATE  SBATCH_gpu.TEMPLATE
configs/: 5yr_analysis.yml  5yr_data.yml  5yr_playground.yml  anais_example.yml  anais_snn_reliability.yml  base_test.yml  biascortest.yml  biascortest2.yml  check_contam.yml  check_efficiency.yml  check_ia_prob_effect.yml  check_lumshift.yml  check_maria_jones.yml  check_mlbias_split.yml  check_nsplitran.yml  check_sim_bias.yml  check_sim_bias_split.yml  check_sim_bias_split_super.yml  check_sim_like_data.yml  check_updated_eff.yml  classify_test.yml  compute_fluxerr.yml  compute_histogram.yml  compute_histogram_spec.yml  compute_spec_eff.yml  dataclassified.yml  datatest.yml  default.yml  des3yr_test.yml  dillon_spec_features.yml  djb_sdss_withreal_test.yml  djb_spec.yml  fakes0_flat.yml  fakes1_dndz.yml  fakes1_flat.yml  fakes_checkmaps.yml  fakes_detcorr.yml  fakes_detcorr2.yml  fakes_final_redcov.yml  fakes_genmaps.yml  (+53 more)
configs/examples/: example_sim.yml
configs/srh/: srh_5yr_analysis.yml  srh_check_efficiency.yml  srh_check_lumshift.yml  srh_check_survey_impact.yml  srh_check_zhost.yml  srh_check_zhost_invest.yml  srh_compute_zhost.yml  srh_compute_zhost_deepstack.yml  srh_des5yr_errorbudget.yml  srh_deslowz_errorbudget.yml  srh_fakes_checkmaps.yml  srh_fakes_checkoldmaps.yml  srh_fakes_genmaps.yml  srh_fakes_getcov.yml  srh_fakes_getphasecor.yml  srh_fakes_sanitycheck.yml  srh_final_sim_dist_check.yml  srh_pippin_talk_example.yml  srh_ref_des_5yr_highconf.yml  srh_ref_des_5yr_highconf_syst.yml  srh_ref_deslowz_5yr.yml  srh_ref_deslowz_5yr_spec.yml  srh_test_columns.yml  srh_test_data_fitopts.yml  srh_test_exteral_source.yml  srh_test_external.yml  srh_test_external_source.yml  srh_test_fitopts.yml  srh_test_foundation.yml  srh_test_global.yml  srh_test_nsplitran.yml  srh_test_nsplitran_off.yml  srh_test_refactor.yml  srh_test_sim_gentype.yml  srh_test_snn_cpu.yml  srh_test_snn_norm.yml  srh_test_static_cosmomc.yml  srh_training_sets.yml
configs/tests/: test_bbc.yml  test_lcfit.yml  test_sims.yml
data_files/: combine.input  submit_combine_fitres.input
data_files/cosmomc_templates/: README.md  cmb_omol.ini  cmb_omw.ini  dataset.txt  nohubble_sn_omw.ini  sn_bao_cmb_omol.ini  sn_bao_hst_omol.ini  sn_bao_hst_omw.ini  sn_bao_hst_wnu.ini  sn_bao_hst_wwa.ini  sn_bao_omol.ini  sn_bao_omw.ini  sn_cmb_bao_omw.ini  sn_cmb_bao_wwa.ini  sn_cmb_hst_omw.ini  sn_cmb_hst_wwa.ini  sn_cmb_omol.ini  sn_cmb_omw.ini  sn_cmb_wwa.ini  sn_flat_omol.ini  sn_omol.ini  sn_omw.ini  sn_omw_prior.ini  sn_prior_omw.ini
data_files/create_cov/: COVMAT.input  covmat.INPUT  input_file.txt
data_files/wfit/: input_file.INPUT
docs/: Makefile  README.md  conf.py  environment.yaml  index.md  index.rst  install.rst  requirements.txt  tasks.rst  usage.rst
docs/source/: index.rst
docs/src/: dev.md  install.md  tasks.md  usage.md
docs/tasks/: dataprep.rst
examples/: aggregation.yml  analyse.yml  biascor.yml  classification.yml  cosmomc.yml  createcov.yml  dataprep.yml  global.yml  globals.yml  lcfit.yml  merge.yml  sim.yml
paper/: paper.bib  paper.md
pippin/: ConfigBasedExecutable.py  aggregator.py  aggregator_legacy.py  analyse.py  base.py  biascor.py  chains.py  combine.py  config.py  cosmomc.py  create_cov.py  create_heatmaps.py  dataprep.py  manager.py  merge.py  merge_legacy.py  sb_create_cov.py  snana_fit.py  snana_sim.py  snana_simulation.py  task.py
pippin/classifiers/: argonne.py  classifier.py  factory.py  fitprob.py  nearest_neighbor.py  nearest_neighbor_code.py  nearest_neighbor_python.py  perfect.py  scone.py  scone_legacy.py  scone_refac.py  snirf.py  supernnova.py  supernnova_legacy.py  toy.py  unity.py
pippin/cosmofitters/: cosmofit.py  cosmomc.py  factory.py  wfit.py
pippin/tasks/: analyse  (+8 more)
temp_tests/: PA_SNN.yml  pa_snirf.yml  snirf.slurm
tests/: test_agg.py  test_biascor.py  test_classify.py  test_dataprep.py  test_expected_failures.py  test_lcfit.py  test_merge.py  test_sim.py  test_valid_config.py  utils.py
(+255 files in other folders)
